# exam_task

./: .gitignore  CMakeLists.txt  README.md
include/: Admin.h  Customer.h  DatabaseConnection.h  Manager.h  Menu.h  Order.h  Payment.h  PaymentStrategy.h  Report.h  User.h
sql/: functions.sql  procedures.sql  sample_data.sql  tables.sql  triggers.sql
src/: Admin.cpp  Customer.cpp  Manager.cpp  Menu.cpp  Order.cpp  PaymentStrategy.cpp  Report.cpp  main.cpp
